# rest4git

./: .env.example  CMakeLists.txt  LICENSE  SECURITY_REPORT.md  security_tests.py
src/: auth.h  config.h  git2api.cpp  git_commands.h  main.cpp  syscmd.h
